@@ -170,7 +170,6 @@ def realMain(cfg, argv=sys.argv):
     argDef["buildreqs"] = NO_PARAM
     argDef["config"] = MULT_PARAM
     argDef["config-file"] = ONE_PARAM
-    argDef["debug"] = NO_PARAM
     argDef["deps"] = NO_PARAM
     argDef["diff"] = NO_PARAM
     argDef["from-file"] = MULT_PARAM
@@ -200,7 +199,6 @@ def realMain(cfg, argv=sys.argv):
     argDef["tags"] = NO_PARAM
     argDef["target-branch"] = ONE_PARAM
     argDef["test"] = NO_PARAM
-    argDef["verbose"] = NO_PARAM
     argDef["version"] = NO_PARAM
     argDef["show-passwords"] = NO_PARAM
 
@@ -237,10 +235,6 @@ def realMain(cfg, argv=sys.argv):
 	prof.start()
 	profile = True
 	del argSet['profile']
-
-    if argSet.has_key('verbose'):
-	log.setVerbosity(log.DEBUG)
-        del argSet['verbose']
 
     if (len(otherArgs) < 2):
 	return usage()
